fix: prevent layout shift when the skip link receives focus

--- a/course-v3/assets/css/skip-link.scss
+++ b/course-v3/assets/css/skip-link.scss
@@ -1,6 +1,9 @@
 .skip-to-main-content {
   &:focus,
   &:focus-visible {
+    position: absolute;
+    top: 10px;
+    left: 10px;
     z-index: 2000;
     display: inline-block;
     padding: 0.75rem 1.5rem;
